# haskell-production-lab

./: .gitignore  ARTIFACT_MANIFEST.md  Dockerfile  Makefile  README.ja.md  README.md  STATUS.md  cabal.project  docker-compose.yml  fourmolu.yaml  haskell-production-lab.cabal  hie.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/api/: Main.hs
app/event-sourcing/: Main.hs
app/ledger/: Main.hs
app/mmlh/: Main.hs
app/monitor/: Main.hs
app/scotty-shortener/: Main.hs
app/search/: Main.hs
app/static-site/: Main.hs
app/stream/: Main.hs
app/tui-kanban/: Main.hs
app/url-shortener/: Main.hs
app/websocket/: Main.hs
app/worker/: Main.hs
blueprints/postgres-adapter/: README.ja.md  README.md
blueprints/yesod-blog-workshop/: Main.hs  README.ja.md  README.md
cloudflare/humblr-workers/: README.ja.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.mjs  wrangler.database.jsonc  wrangler.router.jsonc  wrangler.storage.jsonc
cloudflare/humblr-workers/assets/: index.html
cloudflare/humblr-workers/haskell/: RouterWorker.hs  SharedApi.hs
cloudflare/humblr-workers/schema/: 0001_init.sql  0002_comments_sessions.sql
cloudflare/humblr-workers/test/: database.test.mjs  router.test.mjs
cloudflare/humblr-workers/types/: database-env.d.ts  router-env.d.ts  storage-env.d.ts
cloudflare/humblr-workers/workers/: database.mjs  images.mjs  router.mjs  ssr.mjs  storage.mjs
config/: example.env
docs/: APPLICATION_CATALOG.ja.md  APPLICATION_CATALOG.md  ARCHITECTURE.ja.md  ARCHITECTURE.md  CHEZMOI.ja.md  CHEZMOI.md  CLOUDFLARE_WORKERS_WASM.ja.md  CLOUDFLARE_WORKERS_WASM.md  HASKELL_STRENGTHS.ja.md  HASKELL_STRENGTHS.md  PDF_SOURCE_SYNTHESIS.ja.md  PDF_SOURCE_SYNTHESIS.md  POSTGRESQL_KV.ja.md  POSTGRESQL_KV.md  PRODUCTION_CHECKLIST.ja.md  PRODUCTION_CHECKLIST.md  REFERENCES.ja.md  REFERENCES.md  RELEASE_NOTES_v0.1.0.ja.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.ja.md  RELEASE_NOTES_v0.1.1.md  ROADMAP.ja.md  ROADMAP.md  RUNBOOK.ja.md  RUNBOOK.md  SERVICE_PATTERN.ja.md  SERVICE_PATTERN.md
examples/: ledger.journal  requests.http
examples/content/: index.md
issues/: ISSUES.md
migrations/postgresql/: 0001_hps_kv.sql
src/HPS/: Api.hs  AppState.hs  Domain.hs  Handlers.hs  Html.hs  Lab.hs  Learning.hs  Ledger.hs  RuntimeMonitor.hs  Search.hs  StaticSite.hs  Stream.hs  Util.hs  Validation.hs  WebSocket.hs
src/HPS/Lab/: Html.hs
src/HPS/Service/: Clock.hs  EventStore.hs  KV.hs  Logger.hs  Metrics.hs  Queue.hs
src/HPS/Service/KV/: Postgres.hs
src/HPS/Service/Logger/: Console.hs  Memory.hs
test/: Main.hs
